@startuml
'https://plantuml.com/sequence-diagram
'敌机的工厂模式

interface EnemyFactory{
     + createEnemy():AbstractEnemy
}


class MobEnemy_factory{
    + createEnemy():AbstractEnemy
}


class EliteEnemy_factory{
    + createEnemy():AbstractEnemy
}

class ElitePlusEnemy_factory{
    + createEnemy():AbstractEnemy
}
class BossEnemy_factory{
    + createEnemy():AbstractEnemy
}

EliteEnemy_factory ..|> EnemyFactory
MobEnemy_factory..|> EnemyFactory

ElitePlusEnemy_factory ..|> EnemyFactory
BossEnemy_factory..|> EnemyFactory

EnemyFactory..>AbstractEnemy

abstract class AbstractEnemy{
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + update():void
}


class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + update():void
}

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + update():void
}

class ElitePlusEnemy{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + update():void
}
class BossEnemy{
    + {static}count:int
    - maxHp:int
    - boss_music:LoopPlayer
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp,boolean hasMusic)
    + getBoss_music():void
    + update():void
}

MobEnemy--|>AbstractEnemy
EliteEnemy--|>AbstractEnemy
ElitePlusEnemy--|>AbstractEnemy
BossEnemy--|>AbstractEnemy

@enduml